--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,11 @@
 {
 	"compilerOptions": {
-		"outDir": "lib", 
+		"outDir": "lib",
 		"target": "ES6",
-		"module": "ES6",
-		"declaration": true, 
+		"module": "NodeNext",
+		"declaration": true,
 		"allowJs": false,
-		"strict": true
+		"strict": true,
+		"moduleResolution": "NodeNext"
 	}
 }
